--- a/columns-checkerboard.html
+++ b/columns-checkerboard.html
@@ -16,50 +16,50 @@
          </div>
          <div class="container">
 		  <div class="row">
-			<div class="col-xl-6 col-lg-6 col-md-6 bg-dark text-light py-3">
+			<div class="col-md-6 bg-dark text-light">
 			  <h2>1</h2>
 			</div>
-			<div class="col-xl-6 col-lg-6 col-md-6 order-md-2 py-3">
+			<div class="col-md-6 order-md-2">
 			  <h2>2</h2>
 			</div>
 		   </div>
 			<div class="row">
-			<div class="col-xl-6 col-lg-6 col-md-6 bg-dark  text-light order-md-last py-3">
+			<div class="col-md-6 bg-dark  text-light order-md-last">
 			  <h2>3</h2>
 			</div>
-			<div class="col-xl-6 col-lg-6 col-md-6 py-3">
+			<div class="col-md-6 py-3">
 			  <h2>4</h2>
 			</div>
 			</div>
 			 <div class="row">
-			<div class="col-xl-6 col-lg-6 col-md-6 bg-dark  text-light py-3">
+			<div class="col-md-6 bg-dark  text-light">
 			  <h2>5</h2>
 			</div>
-			<div class="col-xl-6 col-lg-6 col-md-6 py-3">
+			<div class="col-md-6 py-3">
 			  <h2>6</h2>
 			</div>
 			</div>
 			 <div class="row">
-			<div class="col-xl-6 col-lg-6 col-md-6 bg-dark  text-light order-md-last py-3">
+			<div class="col-md-6 bg-dark  text-light order-md-last">
 			  <h2>7</h2>
 			</div>
-			<div class="col-xl-6 col-lg-6 col-md-6 py-3">
+			<div class="col-xl-6 col-lg-6 col-md-6">
 			  <h2>8</h2>
 			</div>
 			</div>
 			 <div class="row">
-			<div class="col-xl-6 col-lg-6 col-md-6 bg-dark  text-light py-3">
+			<div class="col-md-6 bg-dark  text-light">
 			  <h2>9</h2>
 			</div>
-			<div class="col-xl-6 col-lg-6 col-md-6 py-3">
+			<div class="col-md-6">
 			  <h2>10</h2>
 			</div>
 			</div>
 			 <div class="row">
-			<div class="col-xl-6 col-lg-6 col-md-6 bg-dark  text-light order-md-last py-3">
+			<div class="col-md-6 bg-dark  text-light order-md-last">
 			  <h2>11</h2>
 			</div>
-			<div class="col-xl-6 col-lg-6 col-md-6 py-3">
+			<div class="col-md-6 py-3">
 			  <h2>12</h2>
 			</div>
 			</div>
