--- a/d-flex-vertical-align.html
+++ b/d-flex-vertical-align.html
@@ -24,31 +24,31 @@
          </div>
          <div class="container">
             <h4>align-items-start</h4>
-            <div class="d-flex align-items-start bg-dark mb-4 h100">
+            <div class="d-flex justify-content-center align-items-start bg-dark mb-4 h100">
                <div class="p-2 bg-light border border-dark">Flex 1</div>
                <div class="p-2 bg-light border border-dark">Flex 2</div>
                <div class="p-2 bg-light border border-dark">Flex 3</div>
             </div>
             <h4>align-items-end</h4>
-            <div class="d-flex align-items-end bg-dark mb-4 h100">
+            <div class="d-flex justify-content-center align-items-end bg-dark mb-4 h100">
                <div class="p-2 bg-light border border-dark">Flex 1</div>
                <div class="p-2 bg-light border border-dark">Flex 2</div>
                <div class="p-2 bg-light border border-dark">Flex 3</div>
             </div>
             <h4>align-items-center</h4>
-            <div class="d-flex align-items-center bg-dark mb-4 h100">
+            <div class="d-flex justify-content-center align-items-center bg-dark mb-4 h100">
                <div class="p-2 bg-light border border-dark">Flex 1</div>
                <div class="p-2 bg-light border border-dark">Flex 2</div>
                <div class="p-2 bg-light border border-dark">Flex 3</div>
             </div>
             <h4>align-items-baseline</h4>
-            <div class="d-flex align-items-baseline bg-dark mb-4 h100">
+            <div class="d-flex justify-content-center align-items-baseline bg-dark mb-4 h100">
                <div class="p-2 bg-light border border-dark">Flex 1</div>
                <div class="p-2 bg-light border border-dark">Flex 2</div>
                <div class="p-2 bg-light border border-dark">Flex 3</div>
             </div>
             <h4>align-items-stretch</h4>
-            <div class="d-flex align-items-stretch bg-dark mb-4 h100">
+            <div class="d-flex justify-content-center align-items-stretch bg-dark mb-4 h100">
                <div class="p-2 bg-light border border-dark">Flex 1</div>
                <div class="p-2 bg-light border border-dark">Flex 2</div>
                <div class="p-2 bg-light border border-dark">Flex 3</div>
